Fix our warnings, fix ddnsroute53